--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_timezone
 description: "A flutter plugin for getting the local timezone of the device."
-version: 1.0.0
+version: 1.1.0
 homepage: https://github.com/SentraCam/device_timezone
 
 environment:
@@ -48,6 +48,8 @@ flutter:
         sharedDarwinSource: true
       windows:
         pluginClass: DeviceTimezonePluginCApi
+      linux:
+        pluginClass: DeviceTimezonePlugin
       web:
         pluginClass: DeviceTimezonePlugin
         fileName: device_timezone_web.dart
